feat(fin): coa seed
